Fix overflow issue with dropdown toggle buttons on admin reports

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -260,6 +260,7 @@ input.form-control-wide {
 .table-responsive {
 	margin-bottom: 1em;
 	clear: both;
+	overflow: visible;
 }
 
 
